--- a/transcend/src/index.css
+++ b/transcend/src/index.css
@@ -4,11 +4,23 @@ body{
   box-sizing: border-box;
   background-image: url("../src/assets/photon.avif");
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  min-height: 100vh;
+  background-repeat: no-repeat;
+  height: 100vh;
   font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
+}
+.main-div{
+  padding: 20px
+}
+.whitt-color{
+  background-color: white;
+  margin-top: 160px;
+  padding: 50px;
+
+}
+.img-size{
+  
 }
 .heading-color{
   padding: 20px;
@@ -30,8 +42,7 @@ h5
 {color: antiquewhite;}
 h1{
   color: antiquewhite;
-  font-size: 55px;
-  padding: 20px;
+  font-size: 50px;
 }
 h3{
   color: rgb(161, 150, 136);
@@ -55,6 +66,23 @@ h3{
 .hyper-social-div{
   color: #f5f3f3;
   padding: 20px;
+}
+.sidebar{
+
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: flex-end;
+ padding: 20px;
+}
+.flex-div{
+  display: none;
+  background-color: #f5f3f3;
+  position: fixed;
+  right: 0;
+  top: 0;
+ max-width: 190px;
+  height: 100vh;
 }
 
 
